# Alpaca

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/alpaca/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  logger.py  models.py
src/alpaca/agents/: __init__.py  base.py  builder.py  planner.py  reviewer.py  router.py  tester.py
src/alpaca/core/: llm.py  memory.py  orchestrator.py  parser.py  workspace.py
src/alpaca/tools/: base.py  filesystem.py  registry.py  shell.py
src/alpaca/ui/: console.py  dashboard.py
tests/: conftest.py  test_agents.py  test_parser.py  test_tools.py
